# ruff-python-template

./: README.md  cookiecutter.json
.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
